# samagra

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTENT-FACTORY-VISION.html  HANDOFF.md  README.md  SAMAGRA-HANDOFF.md  STATUS.html  SUMMARY.html  concept_aliases.json  config.example  pyproject.toml  requirements.txt
.claude/: launch.json
.githooks/: pre-commit
docs/: deploy-tunnel.md  samagra-vision-deliberation-2026-06-19.html
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
samagra/: __init__.py  __main__.py  catalog.py  config.py  lock.py  notify.py  org.py  questions_proxy.py  scheduler.py  sims_manifest.py  state.py
scripts/: c2_smoke.py  c3_smoke.py  install-durable-task.ps1  serve-durable.ps1  serve-local.ps1  tos_tick.cmd
styleseed/: styleseed-v0.json
teachingos/: __main__.py  catalog.py  config.py  notify.py  scheduler.py  state.py
tests/: conftest.py  test_api_capture.py  test_api_gate.py  test_api_live_reads.py  test_api_org.py  test_api_questions.py  test_api_questions_facets.py  test_api_search.py  test_api_sims.py  test_bridge.py  test_bridge_outbox.py  test_catalog_refresh_safety.py  test_cli_factory_lane.py  test_clients.py  test_coverage_aliases.py  test_coverage_api.py  test_coverage_build.py  test_coverage_cli.py  test_coverage_concepts.py  test_coverage_config.py  test_coverage_edges.py  test_coverage_gaps.py  test_coverage_golden.py  test_coverage_matrix.py  test_coverage_store.py  test_factory_cli.py  test_factory_deck.py  test_factory_dispatch.py  test_gdocs.py  (+48 more)
(+301 files in other folders)
